--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,11 @@
       <artifactId>extentreports</artifactId>
       <version>5.0.8</version>
     </dependency>
+    <dependency>
+      <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-api</artifactId>
+      <version>3.141.59</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
