--- a/pom.xml
+++ b/pom.xml
@@ -30,10 +30,22 @@
       <version>5.0.8</version>
     </dependency>
     <dependency>
-      <groupId>org.seleniumhq.selenium</groupId>
-      <artifactId>selenium-api</artifactId>
-      <version>3.141.59</version>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.11.0</version>
+      <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.maven.surefire</groupId>
+      <artifactId>surefire-shared-utils</artifactId>
+      <version>3.0.0-M4</version>
+      <scope>test</scope>
+    </dependency>
+      <dependency>
+          <groupId>org.seleniumhq.selenium</groupId>
+          <artifactId>selenium-support</artifactId>
+          <version>3.141.59</version>
+      </dependency>
   </dependencies>
   <build>
     <plugins>
@@ -49,5 +61,6 @@
       </plugin>
     </plugins>
   </build>
+
 
 </project>
